# build_system_fall2020

./: README.md
task1/: CMakeLists.txt
task1/A/: CMakeLists.txt  index.h  preparing.py
task1/B/: CMakeLists.txt  lib.cpp  lib.h
task1/C/: CMakeLists.txt  main.cpp  tests.cpp
task2/: Dockerfile  how_to.md
